--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <h2 class="adjust-line-height">
+
+                   <a href="#search-engine-optimization">Search Engine Optimization</a>
+                   <a href="#online-reputation-management">Online Reputation Management</a>
+                   <a href="#social-media-marketing">Social Media Marketing</a>
+                </h2> 
             </ul>
         </div>
-    </div>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
