changes were made to the css file related to h2

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <ul>
                 <h2 class="adjust-line-height">
         
-                   <h3 href="#search-engine-optimization">Search Engine Optimization</h3>
-                   <h4 href="#online-reputation-management">Online Reputation Management</h4>
-                   <h5 href="#social-media-marketing">Social Media Marketing</h5>
+                  <h3> <a href="#search-engine-optimization">Search Engine Optimization</a> </h3>
+                  <h4> <a href="#online-reputation-management">Online Reputation Management</a> </h4>
+                  <h5> <a href="#social-media-marketing">Social Media Marketing</a> </h5>
                 
                 </h2> 
             </ul>
