created a README file

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
     <section class="benefits">
         <header class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation" class="benefit-img"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </header>
         <header class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" class="benefit-img"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </header>
         <header class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management"/>
+            <img src="./assets/images/cost-management.png" alt="Cost Management" class="benefit-img"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
